# clovece_nehnevaj_sa_klient

./: CMakeLists.txt  client.cpp  main.cpp  makefile.bat
soc_client/: client_socket.cpp  client_socket.h  setup_clients.cpp
soc_server/: active_socket.cpp  active_socket.h  passive_socket.cpp  passive_socket.h  server.cpp  setup_server.cpp
sockets/: client_socket.cpp  client_socket.h
